# sick_visionary_samples

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.adoc  CMakeLists.txt  CODE_OF_CONDUCT.adoc  HOW_TO_COLA_COMMANDS.adoc  README.adoc  requirements.txt  setup_linux_env.sh  setup_windows_env.ps1
3pp/: README.md
3pp/botan/: CMakeLists.txt  LICENSE
3pp/botan/src/: botan_all.cpp  botan_all.h
3pp/spng_miniz/: CMakeLists.txt
3pp/spng_miniz/spng/: spng.c
diagnosing_devices/: readme.adoc
diagnosing_devices/cpp/: CMakeLists.txt  device_state.cpp  system_log.cpp
diagnosing_devices/python/: device_state.py  device_state_extended.py  system_log.py
finding_and_connecting_devices/: readme.adoc
finding_and_connecting_devices/cpp/: CMakeLists.txt  configure_sensor.cpp  find_sensor.cpp  hello_sensor.cpp  reconnect_sample.cpp
finding_and_connecting_devices/python/: configure_sensor.py  find_sensor.py  hello_sensor.py  reconnect_sample.py
image_frontend_configuration/: readme.adoc
image_frontend_configuration/cpp/: CMakeLists.txt  save_permanently.cpp  visionary_s_frontend_config.cpp  visionary_t_mini_frontend_config.cpp
image_frontend_configuration/python/: save_permanently.py  visionary_s_frontend_config.py  visionary_t_mini_frontend_config.py
image_streaming_and_storing/: readme.adoc
image_streaming_and_storing/cpp/: CMakeLists.txt  continuous_streaming.cpp  external_trigger.cpp  snapshots.cpp
image_streaming_and_storing/python/: continuous_streaming.py  external_trigger.py  snapshots.py
shared/cpp/: BlobServerConfig.cpp  BlobServerConfig.h  CMakeLists.txt  DecodeError.cpp  DecodeError.h  PtpHelpers.cpp  PtpHelpers.h  TimeStampHelper.cpp  TimeStampHelper.h  UdpParsing.cpp  UdpParsing.h  checkcola.cpp  checkcola.h  exitcodes.h  framewrite.cpp  framewrite.h  frontendmodes.cpp  frontendmodes.h  ioports.cpp  ioports.h  pamwrite.cpp  pamwrite.h  pngwrite.cpp  pngwrite.h  usertypes.cpp  usertypes.h
shared/python/: config.py  data_processing.py  devices_config.py  error_decode.py  frame_buffer_limits.py  framewrite.py  ioports.py  pyproject.toml
time_synchronization/: readme.adoc
time_synchronization/cpp/: CMakeLists.txt  ntp_sync.cpp  ptp_sync.cpp
time_synchronization/python/: ntp_sync.py  ptp_sync.py
userlevels_and_passwords/: readme.adoc
userlevels_and_passwords/cpp/: CMakeLists.txt  CryptoUtils.h  login_logout.cpp  password_change.cpp
userlevels_and_passwords/cpp/cmake/: botan.cmake
userlevels_and_passwords/python/: crypto_utils.py  login_logout.py  password_change.py
visionary_welcome/cpp/: CMakeLists.txt  welcome.cpp
visionary_welcome/python/: welcome.py
